# stik_app

./: .gitignore  .gitmodules  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  homebrew-cask-template.rb
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: darwinkit-spec.md  json-stdio-ipc-research.md
scripts/: release.sh  seed-on-this-day-fixture.sh  seed-streak-fixture.sh  setup-skills.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/: apple_notes.proto
src-tauri/src/: main.rs  shortcuts.rs  state.rs  tray.rs  windows.rs
src-tauri/src/commands/: ai_assistant.rs  analytics.rs  apple_notes.rs  darwinkit.rs  embeddings.rs  file_watcher.rs  folders.rs  git_share.rs  index.rs  mod.rs  notes.rs  on_this_day.rs  settings.rs  share.rs  stats.rs  sticked_notes.rs  versioning.rs
src/components/: AiMenu.tsx  AnalyticsNotice.tsx  AppleNotesPicker.tsx  CommandPalette.tsx  ConfirmDialog.tsx  Editor.tsx  FolderPicker.tsx  FolderSelectorModal.tsx  FormattingToolbar.tsx  LinkPopover.tsx  ManagerModal.tsx  PostIt.tsx  ProductHuntNotice.tsx  SearchModal.tsx  SettingsContent.tsx  SettingsFooterLinks.tsx  SettingsModal.tsx  ShortcutRecorder.tsx  WikiLinkSuggestion.tsx
src/extensions/: cm-bidi.ts  cm-block-widgets.ts  cm-formatting.test.ts  cm-formatting.ts  cm-heading-fold.ts  cm-hide-markers.test.ts  cm-hide-markers.ts  cm-highlight.ts  cm-range-utils.ts  cm-slash-commands.ts  cm-task-toggle.ts  cm-theme.ts  cm-vim.test.ts  cm-vim.ts  cm-wiki-link.ts  collapsible-headings.ts  highlight.test.ts  highlight.ts  markdown-link-rule.test.ts  markdown-link-rule.ts  preserve-empty-paragraphs.test.ts  vim-mode.ts  (+7 more)
(+51 files in other folders)
